--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
-    "@capacitor/android": "^3.2.2",
-    "@capacitor/core": "3.0.0",
+    "@capacitor/android": "^3.3.1",
+    "@capacitor/core": "^3.0.0",
     "@ionic-native/barcode-scanner": "^5.33.1",
     "@ionic-native/core": "^5.33.1",
     "@ionic-native/local-notifications": "^5.33.1",
     "@ionic-native/onesignal": "^5.33.1",
+    "@ionic-native/speech-recognition": "^5.36.0",
     "@ionic-native/status-bar": "^5.33.1",
     "@ionic-native/text-to-speech": "^5.33.1",
     "@ionic-native/unique-device-id": "^5.36.0",
@@ -36,6 +37,7 @@
     "cordova": "^10.0.0",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-speechrecognition": "^1.2.0",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-tts": "^0.2.3",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
@@ -58,7 +60,7 @@
     "@angular/compiler": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
     "@angular/language-service": "~12.0.1",
-    "@capacitor/cli": "3.0.0",
+    "@capacitor/cli": "^3.0.0",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
