--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host 0.0.0.0 --proxy-config ./proxy-conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -23,9 +23,10 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
-    "@capacitor/android": "^3.3.1",
-    "@capacitor/core": "^3.0.0",
+    "@capacitor/android": "^3.3.2",
+    "@capacitor/core": "3.3.2",
     "@ionic-native/barcode-scanner": "^5.33.1",
+    "@ionic-native/call-number": "^5.36.0",
     "@ionic-native/core": "^5.33.1",
     "@ionic-native/local-notifications": "^5.33.1",
     "@ionic-native/onesignal": "^5.33.1",
@@ -34,6 +35,7 @@
     "@ionic-native/text-to-speech": "^5.33.1",
     "@ionic-native/unique-device-id": "^5.36.0",
     "@ionic/angular": "^5.5.2",
+    "call-number": "^1.0.1",
     "cordova": "^10.0.0",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-device": "^2.0.3",
@@ -60,7 +62,7 @@
     "@angular/compiler": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
     "@angular/language-service": "~12.0.1",
-    "@capacitor/cli": "^3.0.0",
+    "@capacitor/cli": "3.3.2",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
