--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-	"appId": "com.driver.test",
-	"appName": "AmbipalmDriver",
+	"appId": "com.test.driver",
+	"appName": "AmpiPalmDriver",
 	"webDir": "www",
 	"bundledWebRuntime": false
 }
