--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@awesome-cordova-plugins/background-geolocation": "^5.37.3",
+    "@awesome-cordova-plugins/launch-navigator": "^5.37.3",
     "@capacitor/android": "^3.3.4",
     "@capacitor/core": "3.3.2",
     "@ionic-native/barcode-scanner": "^5.33.1",
@@ -37,8 +39,10 @@
     "@ionic/angular": "^5.5.2",
     "call-number": "^1.0.1",
     "cordova": "^10.0.0",
+    "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-speechrecognition": "^1.2.0",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-tts": "^0.2.3",
@@ -49,6 +53,7 @@
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "uk.co.workingedge.phonegap.plugin.launchnavigator": "^5.0.6",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
