--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-	"appId": "com.test.driver",
+	"appId": "com.driver.test",
 	"appName": "AmpiPalmDriver",
 	"webDir": "www",
 	"bundledWebRuntime": false
